data/derived/comb/progs/unify/prog7337.ml.out
Characters 165-167:
  mulByDigit i [let [h2]::t2 = t in [(h2+(h*i mod 10))]@t2];;
                                                        ^^
Error: This expression has type int list list
       but an expression was expected of type int list
       Type int list is not compatible with type int 
